--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
   </head>
   <body>
     <div class="container">
-      <div class="col-4 mt-5 ml-auto">
-        <select
-          name="location"
-          id="location"
-          class="form-control form-control-sm bg-transparent text-white"
-        >
-          <option value="jakarta">JKT</option>
-          <option value="bekasi">BKS</option>
-          <option value="Tangerang">TGR</option>
-          <option value="bandung">BDG</option>
-        </select>
-      </div>
       <div class="holder">
+        <div class="col-4 mt-5 ml-auto">
+          <select
+            name="location"
+            id="location"
+            class="form-control form-control-sm bg-transparent text-primary"
+          >
+            <option value="jakarta">JKT</option>
+            <option value="bekasi">BKS</option>
+            <option value="Tangerang">TGR</option>
+            <option value="bandung">BDG</option>
+          </select>
+        </div>
         <section id="cuaca" style="margin-top: 80px">
           <!-- <div class="d-flex align-self-center justify-content-center">
             <div class="row">
