--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <select
             name="location"
             id="location"
-            class="form-control form-control-sm bg-transparent text-primary"
+            class="form-control form-control-sm bg-transparent text-warning"
           >
             <option value="jakarta">JKT</option>
             <option value="bekasi">BKS</option>
